<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/bg_screen_ss"
    tools:context=".StartActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/app_home"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="55dp"
            android:contentDescription="@string/app_start"
            app:srcCompat="@drawable/app_home" />

        <LinearLayout
            android:id="@+id/layout_start"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginTop="45dp">

            <ImageView
                android:id="@+id/p1"
                android:layout_width="0dp"
                android:layout_height="100dp"
                android:layout_weight="1"
                android:contentDescription="@string/p1"
                app:srcCompat="@drawable/s1"
                app:layout_constraintBottom_toBottomOf="@+id/layout_start"
                app:layout_constraintLeft_toLeftOf="@+id/p2" />

            <ImageView
                android:id="@+id/p2"
                android:layout_width="0dp"
                android:layout_height="100dp"
                android:layout_weight="1.3"
                android:contentDescription="@string/p2"
                app:srcCompat="@drawable/s2"
                app:layout_constraintBottom_toBottomOf="@+id/layout_start"
                app:layout_constraintRight_toRightOf="@+id/p1"
                app:layout_constraintLeft_toLeftOf="@+id/p3" />

            <ImageView
                android:id="@+id/p3"
                android:layout_width="0dp"
                android:layout_height="100dp"
                android:layout_weight="1"
                android:contentDescription="@string/p3"
                app:srcCompat="@drawable/s3"
                app:layout_constraintBottom_toBottomOf="@+id/layout_start"
                app:layout_constraintRight_toRightOf="@+id/p2" />

        </LinearLayout>

        <TextView
            android:id="@+id/tagLine"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="45dp"
            android:fontFamily="@font/aldrich"
            android:text="@string/tag_line"
            android:textColor="@color/tag_color"
            android:textSize="@dimen/tag_line"
            android:textStyle="bold" />

        <Button
            android:id="@+id/btn_start"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="45dp"
            android:fontFamily="@font/aldrich"
            android:text="@string/btn_start"
            android:textColor="@color/btn_start"
            android:textSize="20sp"
            android:textStyle="bold" />

    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>